Table no longer overflows

--- a/static/style.css
+++ b/static/style.css
@@ -75,3 +75,7 @@ footer {
         color: #d2abef;
     }
 }
+
+.tablecontainer {
+	overflow-x: auto;
+}
